--- a/Core/CodingDojo-ButtonClicker/index.html
+++ b/Core/CodingDojo-ButtonClicker/index.html
@@ -16,7 +16,7 @@
       <!--Now instead of a div with class nav-bar,
          i will use the header-->
       <h1>Dojonary</h1>
-      <input type="search" name="search" id="search-bar">
+      <input type="search" name="search" id="search-bar" value="Search">
       <button type="button" onclick="change(this)">Login</button>
    </header>
    <main>
