--- a/Core/CodingDojo-ButtonClicker/index.html
+++ b/Core/CodingDojo-ButtonClicker/index.html
@@ -16,8 +16,8 @@
       <!--Now instead of a div with class nav-bar,
          i will use the header-->
       <h1>Dojonary</h1>
-      <input type="search" name="search" id="search-bar" value="Search">
-      <button type="button" onclick="change(this)">Login</button>
+      <input type="search" name="search" id="search-bar" placeholder="Search">
+      <a id="login" class="btn" href="#">Login</a>
    </header>
    <main>
       <article>
