Update html and css

--- a/Core/CodingDojo-ButtonClicker/index.html
+++ b/Core/CodingDojo-ButtonClicker/index.html
@@ -16,17 +16,28 @@
       <!--Now instead of a div with class nav-bar,
          i will use the header-->
       <h1>Dojonary</h1>
-      <input type="search" name="search" id="search-bar" value="Search">
+      <input type="search" name="search" id="search-bar" placeholder="Search">
       <button type="button" onclick="change(this)">Login</button>
    </header>
    <main>
-      <article>
+      <div class="col2">
+         <article class="row">
+            <h1>Ninja</h1>
+            <p>noun</p>
+            <p>Plural: <span>Ninjas</span></p>
+            <button type="button" onclick="addLikes()">Like</button>
+         </article>
+         <article class="row">
+            <h1>Ninja</h1>
+            <p>noun</p>
+            <p>Plural: <span>Ninjas</span></p>
+            <button type="button" onclick="addLikes()">Like</button>
+         </article>
+      </div>
+      <aside class="col">
          <!--To Do-->
-      </article>
+      </aside>
    </main>
-   <aside>
-      <!--To Do-->
-   </aside>
 </body>
 
 </html>
