Add script.js and finish the styling

--- a/Core/CodingDojo-ButtonClicker/index.html
+++ b/Core/CodingDojo-ButtonClicker/index.html
@@ -17,16 +17,16 @@
          i will use the header-->
       <h1>Dojonary</h1>
       <input type="search" name="search" id="search-bar" placeholder="Search">
-      <button type="button" onclick="change(this)">Login</button>
+      <button type="button" onclick="login(this)">Login</button>
    </header>
    <main>
       <div class="col2">
          <article class="row">
             <div class="article-header">
                <h1>Ninja</h1>
-               <p>noun</p>
+               <h3 id="italic">noun</h3>
                <p>Plural: <span id="italic">Ninjas</span></p>
-               <button type="button" onclick="addLikes()">Like</button>
+               <button type="button" onclick="addLikes()">13 Likes</button>
             </div>
             <div class="article-main">
                <p>
@@ -38,9 +38,9 @@
          <article class="row">
             <div class="article-header">
                <h1>Ninja</h1>
-               <p>noun</p>
+               <h3 id="italic">noun</h3>
                <p>Plural: <span id="italic">Ninjas</span></p>
-               <button type="button" onclick="addLikes()">Like</button>
+               <button type="button" onclick="addLikes()">38 Likes</button>
             </div>
             <div class="article-main">
                <p>
@@ -58,6 +58,7 @@
          </div>
       </aside>
    </main>
+   <script src="script.js"></script>
 </body>
 
 </html>
