--- a/Practice/CodingDojo-VideoPreview/index.html
+++ b/Practice/CodingDojo-VideoPreview/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VideoLab</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <!-- top navigation -->
@@ -33,6 +35,7 @@
                     <rect width="100%" height="100%" fill="#868e96"></rect>
                     <text x="50%" y="50%" dy=".3em" fill="#dee2e6" >Replace Me!</text>
                 </svg>
+                <video width="720" height="400" muted onmouseover="play(this)" onmouseout="pause(this)" onclick="unmute(this)" src="assets/pexels-aakash-bhavsar-13948918 (1080p).mp4"></video>
             </figure>
 
             <!-- video info -->
@@ -81,4 +84,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
