--- a/Practice/CodingDojo-WeatherDojo/index.html
+++ b/Practice/CodingDojo-WeatherDojo/index.html
@@ -39,8 +39,8 @@
                 <div class="card-body">
                     <p>Some rain</p>
                     <div class="card-temperature">
-                        <p class="max"><span class="card-temp">24</span>º</p>
-                        <p class="min"><span class="card-temp">18</span>º</p>
+                        <p class="max"><span class="card-temp">24</span><span class="card-symbol">ºC</span></p>
+                        <p class="min"><span class="card-temp">18</span><span class="card-symbol">ºC</span></p>
                     </div>
                 </div>
             </article>
@@ -52,8 +52,8 @@
                 <div class="card-body">
                     <p>Some sun </p>
                     <div class="card-temperature">
-                        <p class="max"><span class="card-temp">27</span>º</p>
-                        <p class="min"><span class="card-temp">19</span>º</p>
+                        <p class="max"><span class="card-temp">27</span><span class="card-symbol">ºC</span></p>
+                        <p class="min"><span class="card-temp">19</span><span class="card-symbol">ºC</span></p>
                     </div>
                 </div>
             </article>
@@ -65,8 +65,8 @@
                 <div class="card-body">
                     <p>Some clouds</p>
                     <div class="card-temperature">
-                        <p class="max"><span class="card-temp">21</span>º</p>
-                        <p class="min"><span class="card-temp">16</span>º</p>
+                        <p class="max"><span class="card-temp">21</span><span class="card-symbol">ºC</span></p>
+                        <p class="min"><span class="card-temp">16</span><span class="card-symbol">ºC</span></p>
                     </div>
                 </div>
             </article>
@@ -78,8 +78,8 @@
                 <div class="card-body">
                     <p>Some sun </p>
                     <div class="card-temperature">
-                        <p class="max"><span class="card-temp">26</span>º</p>
-                        <p class="min"><span class="card-temp">21</span>º</p>
+                        <p class="max"><span class="card-temp">26</span><span class="card-symbol">ºC</span></p>
+                        <p class="min"><span class="card-temp">21</span><span class="card-symbol">ºC</span></p>
                     </div>
                 </div>
             </article>
